[package]
name = "tell-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = { version = "0.2.1", features = ["stream"] }
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
termimad = "0.20"

[[bin]]
name = "tell"
path = "src/main.rs"
